--- a/listadetarefas/assets/css/style.css
+++ b/listadetarefas/assets/css/style.css
@@ -30,3 +30,32 @@ section > ul > li{
     padding: 3px;
     font-size: 1.1em;
 }
+
+section > h1{
+    text-align: center;
+}
+
+
+.container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    margin-top: 8px;
+}
+
+div > input#texto{
+    padding: 3px;
+}
+
+div > input#enviar{
+    margin-left: 10px;
+    padding: 3px;
+    background-color: green;
+    border-radius: 3px;
+}
+
+ul > li{
+    text-decoration: none;
+}
